--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.1",
-    "circomlib": "^2.0.2"
+    "circomlib": "^2.0.2",
+    "zkey-manager": "^0.1.2"
   }
 }
