--- a/circuits/zkeys.config.yml
+++ b/circuits/zkeys.config.yml
@@ -3,14 +3,14 @@ out: "./zkeys"
 
 # Make sure that these paths are correct
 circomPath: "../../../.cargo/bin/circom"
-snarkjsPath: "../node_modules/snarkjs/build/cli.cjs"
-circomRuntimePath: "../node_modules/circom_runtime"
-ffiasmPath: "../node_modules/ffiasm"
+snarkjsPath: "./node_modules/snarkjs/build/cli.cjs"
+circomRuntimePath: "./node_modules/circom_runtime"
+ffiasmPath: "./node_modules/ffiasm"
 
 circomFlags: "--r1cs --sym --wasm --wat"
 
 circuits:
-- template: "./verify_df_winner.circom"
+- template: "./circuits/verify_df_winner.circom"
   component: "VerifyDfWinner"
   params: [86, 3, 10] # NOTE: levels TBD based on actual data
   pubInputs: ["merkleRoot"]
