--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,6 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 src/contracts
+public/*.zkey
+public/*.wasm
 
 # dependencies
 /node_modules
