--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "4.0.3",
-    "snarkjs": "^0.4.10"
+    "snarkjs": "^0.4.10",
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
